@@ -1,7 +1,7 @@
-[[Raku PDF Project]](https://pdf-raku.github.io)
- / [[HarfBuzz Module]](https://pdf-raku.github.io/HarfBuzz-raku)
- / [HarfBuzz](https://pdf-raku.github.io/HarfBuzz-raku/HarfBuzz)
- :: [Blob](https://pdf-raku.github.io/HarfBuzz-raku/HarfBuzz/Blob)
+[[Raku HarfBuzz Project]](https://harfbuzz-raku.github.io)
+ / [[HarfBuzz Module]](https://harfbuzz-raku.github.io/HarfBuzz-raku)
+ / [HarfBuzz](https://harfbuzz-raku.github.io/HarfBuzz-raku/HarfBuzz)
+ :: [Blob](https://harfbuzz-raku.github.io/HarfBuzz-raku/HarfBuzz/Blob)
 
 class HarfBuzz::Blob
 --------------------
